--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <h1 class="title-t4">2023 신년계획</h1>
     <p class="msg">올해는 꼭 모두 지키자!</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1-t2 center done">바디프로필 찍기</div>
+        <div class="bucket img1-t2 center">바디프로필 찍기</div>
         <div class="bucket img2 center">내가 하고싶은것 찾기</div>
         <div class="bucket img2 center">영어 공부하기(토익/토스)</div>
         <div class="bucket img1-t4 center">남 눈치에 기죽지 않는 나 되기</div>
